--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/HardwareDeBloco/Create.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/HardwareDeBloco/Create.cshtml
@@ -18,7 +18,7 @@
                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                             <div class="form-group">
                                 <label asp-for="MAC" class="control-label"></label>
-                                <input asp-for="MAC" class="form-control" id="input-mac" data-inputmask="'mask' : '**.**.**.**.**'" required="required" />
+                                <input asp-for="MAC" class="form-control" id="input-mac" required="required" />
                                 <span asp-validation-for="MAC" class="text-danger"></span>
                             </div>
                             <div class="form-group">
