--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/HardwareDeSala/Create.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/HardwareDeSala/Create.cshtml
@@ -18,7 +18,7 @@
                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                             <div class="form-group">
                                 <label asp-for="MAC" class="control-label"></label>
-                                <input asp-for="MAC" id="input-mac"  class="form-control" />
+                                <input asp-for="MAC" id="input-mac" class="form-control" />
                                 <span asp-validation-for="MAC" class="text-danger"></span>
                             </div>
                             <div class="form-group">
@@ -64,15 +64,13 @@ else if (TempData["mensagemErro"] != null)
         $(document).ready(function () {
             if (document.querySelector('#mensagem-retorno'))
                 document.getElementById("mensagem-retorno").click();
-
-            $('#input-mac').inputmask("**:**:**:**:**:**");
         });
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <script src="~/js/sweet-alert.js"></script>
-    <script src="~/plugins/inputmask/min/inputmask/inputmask.min.js"></script>
-    <script src="~/plugins/inputmask/min/inputmask/jquery.inputmask.min.js"></script>
+    <script src="~/js/custom.js"></script>
+    <script src="~/plugins/inputmask/inputmask/jquery.mask.js"></script>
 
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
