--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Bloco/Index.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Bloco/Index.cshtml
@@ -29,7 +29,7 @@
                                         @Html.DisplayNameFor(model => model.Id)
                                     </th>
                                     <th>
-                                        @Html.DisplayNameFor(model => model.OrganizacaoId.RazaoSocial)
+                                        @Html.DisplayNameFor(model => model.OrganizacaoId)
                                     </th>
                                     <th>
                                         @Html.DisplayNameFor(model => model.Titulo)
